# ComfyUI-LivePortraitKJ

./: nodes.py  pyproject.toml  requirements.txt
liveportrait/: live_portrait_pipeline.py
liveportrait/utils/: cropper.py  landmark_runner.py
